--- a/style.css
+++ b/style.css
@@ -152,6 +152,15 @@ html, body {
     margin-bottom: 16px;
     border-radius: 12px;
 }
+.heart-pic{
+    width: 24px;
+    height: 24px;
+}
+.last-pic{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .card-pic2{
     width: 60px;
     height: 60px;
@@ -289,7 +298,6 @@ html, body {
     /* text-align: center; */
     /* align-items: center;  */
     gap: 8px;
-    /* justify-content: center; */
     margin-left: 24px;
     font-family: "Roboto", sans-serif;
     font-size: 1.25rem;
