--- a/style.css
+++ b/style.css
@@ -126,11 +126,14 @@ html, body {
     padding: 0 50px;
     /* margin-left: 50px; */
 } 
+.comment-nav-main{
+    grid-row: span 3;
+}
  .comment-nav{
     display: flex; 
     justify-content: space-between; 
     /* gap: 100px; */
-    grid-row: span 3;
+    /* grid-row: span 3; */
     margin-top: 0;
     border-radius: 12px;
     background: #FFFFFF;
@@ -304,3 +307,5 @@ html, body {
     font-weight: 500;
     color: #111111;
 }
+
+
