--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    padding: 30px 0;
+    /* height: 100px; */
     width: 100%;
 }
 .first-nav{
@@ -83,7 +84,7 @@ html, body {
 /* banner */
 .banner{
     background: linear-gradient(90deg, #013223 0%, #006747 49.99%, #013223 100%);
-    height: 239px;
+    /* height: 239px; */
     width: 100%;
     /* padding-bottom: 21px;
     padding-top: 21px; */
@@ -309,3 +310,22 @@ html, body {
 }
 
 
+
+
+
+
+/* responsive */
+
+@media screen and (max-width:576px){
+    .nav-bar{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .main-class{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+}
+    
+
+    
